# bot-solana

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: main.rs
