[package]
name = "solana_analyzer"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "solana_analyzer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
